### @configure_input@
#

AC_PREREQ([2.69])
MMUX_PKG_VERSIONS([0],[8],[0],[devel.10])
AC_INIT([CCExceptions],[MMUX_PACKAGE_VERSION],
  [marco.maggi-ipsu@poste.it],
  [ccexceptions],[http://github.com/marcomaggi/ccexceptions/])
MMUX_INIT
MMUX_LIBTOOL_LIBRARY_VERSIONS([ccexceptions],8,0,0)
AC_REVISION([1.0])
AC_COPYRIGHT([Copyright (c) 2016, 2017, 2018, 2019 Marco Maggi <marco.maggi-ipsu@poste.it>

This program is free software: you  can redistribute it and/or modify it
under the terms of the GNU Lesser General Public License as published by
the Free  Software Foundation, either version  3 of the License,  or (at
your option) any later version.

This program  is distributed  in the  hope that it  will be  useful, but
WITHOUT   ANY   WARRANTY;  without   even   the   implied  warranty   of
MERCHANTABILITY  or  FITNESS FOR  A  PARTICULAR  PURPOSE.  See  the  GNU
General Public License for more details.

You should have received a copy of the GNU Lesser General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
])
AC_CONFIG_SRCDIR([src/])
AC_CONFIG_MACRO_DIR([meta/autotools])
AC_CONFIG_AUX_DIR([meta/autotools])
AC_CANONICAL_BUILD
AC_CANONICAL_HOST
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE([foreign subdir-objects])
AM_MAINTAINER_MODE

AM_PROG_AR
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_MKDIR_P

LT_PREREQ([2.4])
LT_INIT


#### basic system inspection

MMUX_CHECK_TARGET_OS
AX_IS_RELEASE([git-directory])

AC_LANG([C])
MMUX_LANG_C11

AM_PROG_AS
AM_PROG_CC_C_O
AC_HEADER_STDC
AC_CHECK_HEADERS([assert.h stdint.h stdbool.h setjmp.h memory.h limits.h])
AC_HEADER_STDBOOL

dnl The  documentation of GNU  Autoconf states that AC_PROG_CC  sets the
dnl variable "GCC" to "yes" if the selected compiler is GCC.
AM_CONDITIONAL([WANT_GCC],[test "x$GCC" = xyes])

dnl This constant is redefined in the main header file.  We define it here so
dnl that it is there in the tests below.
AC_DEFINE([_POSIX_C_SOURCE],[200809L],[Request enabling latest POSIX features.])

AC_CACHE_SAVE


#### external libraries

MMUX_CHECK_PKG_CONFIG_MACROS
PKG_INSTALLDIR


#### errno values inspection

CCE_ERRNO_TEST([E2BIG])
CCE_ERRNO_TEST([EACCES])
CCE_ERRNO_TEST([EADDRINUSE])
CCE_ERRNO_TEST([EADDRNOTAVAIL])
CCE_ERRNO_TEST([EADV])
CCE_ERRNO_TEST([EAFNOSUPPORT])
CCE_ERRNO_TEST([EAGAIN])
CCE_ERRNO_TEST([EALREADY])
CCE_ERRNO_TEST([EAUTH])
CCE_ERRNO_TEST([EBACKGROUND])
CCE_ERRNO_TEST([EBADE])
CCE_ERRNO_TEST([EBADFD])
CCE_ERRNO_TEST([EBADF])
CCE_ERRNO_TEST([EBADMSG])
CCE_ERRNO_TEST([EBADRPC])
CCE_ERRNO_TEST([EBADRQC])
CCE_ERRNO_TEST([EBADR])
CCE_ERRNO_TEST([EBADSLT])
CCE_ERRNO_TEST([EBFONT])
CCE_ERRNO_TEST([EBUSY])
CCE_ERRNO_TEST([ECANCELED])
CCE_ERRNO_TEST([ECHILD])
CCE_ERRNO_TEST([ECHRNG])
CCE_ERRNO_TEST([ECOMM])
CCE_ERRNO_TEST([ECONNABORTED])
CCE_ERRNO_TEST([ECONNREFUSED])
CCE_ERRNO_TEST([ECONNRESET])
CCE_ERRNO_TEST([EDEADLK])
CCE_ERRNO_TEST([EDEADLOCK])
CCE_ERRNO_TEST([EDESTADDRREQ])
CCE_ERRNO_TEST([EDIED])
CCE_ERRNO_TEST([EDOM])
CCE_ERRNO_TEST([EDOTDOT])
CCE_ERRNO_TEST([EDQUOT])
CCE_ERRNO_TEST([EEXIST])
CCE_ERRNO_TEST([EFAULT])
CCE_ERRNO_TEST([EFBIG])
CCE_ERRNO_TEST([EFTYPE])
CCE_ERRNO_TEST([EHOSTDOWN])
CCE_ERRNO_TEST([EHOSTUNREACH])
CCE_ERRNO_TEST([EHWPOISON])
CCE_ERRNO_TEST([EIDRM])
CCE_ERRNO_TEST([EILSEQ])
CCE_ERRNO_TEST([EINPROGRESS])
CCE_ERRNO_TEST([EINTR])
CCE_ERRNO_TEST([EINVAL])
CCE_ERRNO_TEST([EIO])
CCE_ERRNO_TEST([EISCONN])
CCE_ERRNO_TEST([EISDIR])
CCE_ERRNO_TEST([EISNAM])
CCE_ERRNO_TEST([EKEYEXPIRED])
CCE_ERRNO_TEST([EKEYREJECTED])
CCE_ERRNO_TEST([EKEYREVOKED])
CCE_ERRNO_TEST([EL2HLT])
CCE_ERRNO_TEST([EL2NSYNC])
CCE_ERRNO_TEST([EL3HLT])
CCE_ERRNO_TEST([EL3RST])
CCE_ERRNO_TEST([ELIBACC])
CCE_ERRNO_TEST([ELIBBAD])
CCE_ERRNO_TEST([ELIBEXEC])
CCE_ERRNO_TEST([ELIBMAX])
CCE_ERRNO_TEST([ELIBSCN])
CCE_ERRNO_TEST([ELNRNG])
CCE_ERRNO_TEST([ELOOP])
CCE_ERRNO_TEST([EMEDIUMTYPE])
CCE_ERRNO_TEST([EMFILE])
CCE_ERRNO_TEST([EMLINK])
CCE_ERRNO_TEST([EMSGSIZE])
CCE_ERRNO_TEST([EMULTIHOP])
CCE_ERRNO_TEST([ENAMETOOLONG])
CCE_ERRNO_TEST([ENAVAIL])
CCE_ERRNO_TEST([ENEEDAUTH])
CCE_ERRNO_TEST([ENETDOWN])
CCE_ERRNO_TEST([ENETRESET])
CCE_ERRNO_TEST([ENETUNREACH])
CCE_ERRNO_TEST([ENFILE])
CCE_ERRNO_TEST([ENOANO])
CCE_ERRNO_TEST([ENOBUFS])
CCE_ERRNO_TEST([ENOCSI])
CCE_ERRNO_TEST([ENODATA])
CCE_ERRNO_TEST([ENODEV])
CCE_ERRNO_TEST([ENOENT])
CCE_ERRNO_TEST([ENOEXEC])
CCE_ERRNO_TEST([ENOKEY])
CCE_ERRNO_TEST([ENOLCK])
CCE_ERRNO_TEST([ENOLINK])
CCE_ERRNO_TEST([ENOMEDIUM])
CCE_ERRNO_TEST([ENOMEM])
CCE_ERRNO_TEST([ENOMSG])
CCE_ERRNO_TEST([ENONET])
CCE_ERRNO_TEST([ENOPKG])
CCE_ERRNO_TEST([ENOPROTOOPT])
CCE_ERRNO_TEST([ENOSPC])
CCE_ERRNO_TEST([ENOSR])
CCE_ERRNO_TEST([ENOSTR])
CCE_ERRNO_TEST([ENOSYS])
CCE_ERRNO_TEST([ENOTBLK])
CCE_ERRNO_TEST([ENOTCONN])
CCE_ERRNO_TEST([ENOTDIR])
CCE_ERRNO_TEST([ENOTEMPTY])
CCE_ERRNO_TEST([ENOTNAM])
CCE_ERRNO_TEST([ENOTRECOVERABLE])
CCE_ERRNO_TEST([ENOTSOCK])
CCE_ERRNO_TEST([ENOTSUP])
CCE_ERRNO_TEST([ENOTTY])
CCE_ERRNO_TEST([ENOTUNIQ])
CCE_ERRNO_TEST([ENXIO])
CCE_ERRNO_TEST([EOPNOTSUPP])
CCE_ERRNO_TEST([EOVERFLOW])
CCE_ERRNO_TEST([EOWNERDEAD])
CCE_ERRNO_TEST([EPERM])
CCE_ERRNO_TEST([EPFNOSUPPORT])
CCE_ERRNO_TEST([EPIPE])
CCE_ERRNO_TEST([EPROCLIM])
CCE_ERRNO_TEST([EPROCUNAVAIL])
CCE_ERRNO_TEST([EPROGMISMATCH])
CCE_ERRNO_TEST([EPROGUNAVAIL])
CCE_ERRNO_TEST([EPROTONOSUPPORT])
CCE_ERRNO_TEST([EPROTOTYPE])
CCE_ERRNO_TEST([EPROTO])
CCE_ERRNO_TEST([ERANGE])
CCE_ERRNO_TEST([EREMCHG])
CCE_ERRNO_TEST([EREMOTEIO])
CCE_ERRNO_TEST([EREMOTE])
CCE_ERRNO_TEST([ERESTART])
CCE_ERRNO_TEST([ERFKILL])
CCE_ERRNO_TEST([EROFS])
CCE_ERRNO_TEST([ERPCMISMATCH])
CCE_ERRNO_TEST([ESHUTDOWN])
CCE_ERRNO_TEST([ESOCKTNOSUPPORT])
CCE_ERRNO_TEST([ESPIPE])
CCE_ERRNO_TEST([ESRCH])
CCE_ERRNO_TEST([ESRMNT])
CCE_ERRNO_TEST([ESTALE])
CCE_ERRNO_TEST([ESTRPIPE])
CCE_ERRNO_TEST([ETIMEDOUT])
CCE_ERRNO_TEST([ETIME])
CCE_ERRNO_TEST([ETOOMANYREFS])
CCE_ERRNO_TEST([ETXTBSY])
CCE_ERRNO_TEST([EUCLEAN])
CCE_ERRNO_TEST([EUNATCH])
CCE_ERRNO_TEST([EUSERS])
CCE_ERRNO_TEST([EWOULDBLOCK])
CCE_ERRNO_TEST([EXDEV])
CCE_ERRNO_TEST([EXFULL])


#### finish

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile]
   [meta/scripts/ccexceptions.pc]
   [meta/slackware/slack-desc])
MMUX_OUTPUT
AC_OUTPUT

### end of file
